# ECE_573_FINAL_PROJECT

./: .gitignore  CMakeLists.txt  README.md  car.launch  dynamic_world.launch  generation_node.py  gui_node.py  osm_to_building.py  package.xml  simulation_node.py  test_node.py
config/: diffdrive1.yaml  steering.yaml
launch/: city.launch  freeway.launch  neighborhood.launch  osm_1.launch  vehicle_test.launch
models/city/: city.sdf  model.config
models/city/meshes/: model.dae
models/freeway/: freeway.sdf  model.config
models/freeway/meshes/: model.dae
models/neighborhood/: model.config  neighborhood.sdf
models/neighborhood/meshes/: model.dae
models/osm_1/: model.config  osm_1.sdf
models/osm_1/meshes/: TestFile1.dae
simulation_node_gazebo/: CMakeLists.txt  package.xml
urdf/: prius.urdf
worlds/: city.world  freeway.world  neighborhood.world  osm_1.world
